# Masterclass-Project-1

./: ur3e_robot_moveit.urdf.xacro
attach_to_cart/: CMakeLists.txt  README.md  package.xml
attach_to_cart/launch/: attach_cart.launch  detect_cart.launch
attach_to_cart/src/: attach_cart.py  detect_cart.py
box_camera_description/: CMakeLists.txt  package.xml
box_camera_description/launch/: camera_spawn.launch  static_transform.launch  warehouse_ur3e_rg2.launch
box_camera_description/rviz_config/: perception.rviz  ur3e_rg2.rviz  ur3e_rg2_pc_cam.rviz
box_camera_description/scripts/: start_pc_cam.sh  start_ur3e_rg2.sh  start_ur3e_rg2_pc_cam.sh
box_camera_description/urdf/: pointcloud_camera.xacro  rg2_gripper.xacro
move_robot/: CMakeLists.txt  package.xml
move_robot/action/: OdomRecord.action
move_robot/launch/: attach_to_cart.launch  goto_loading_pos.launch  goto_loading_pos_client.launch  goto_loading_pos_service.launch  main.launch  record_odom_ac.launch  record_odom_as.launch
move_robot/scripts/: attach_to_cart.py  goto_loading_pos.py  goto_loading_pos_service_client.py  goto_loading_pos_service_server.py  odom_record_ac.py  odom_record_as.py
move_robot/scripts/Action/: ActionClient.py
move_robot/scripts/Robot/: Robot.py
move_robot/scripts/Service/: ServiceClient.py  ServiceServer.py
move_robot/srv/: GoToLoading.srv
my_ur3e_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
my_ur3e_moveit_config/config/: fake_controllers.yaml  ros_controllers.yaml  ur3e.srdf
my_ur3e_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  my_ur3e_planning_execution.launch  ompl_planning_pipeline.launch.xml  pick_place.launch  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur3e_moveit_controller_manager.launch.xml  warehouse.launch
my_ur3e_moveit_config/script/: pick_place.py  pick_place.sh
project_object_detection/: CMakeLists.txt  package.xml
project_object_detection/launch/: publish_object_position.launch  surface_detection_simple.launch
project_object_detection/rviz_config/: od_markers.rviz
project_object_detection/scripts/: get_objects_position.py  publish_object_position.py  start_perception_pipeline.sh
rb1_localization/: CMakeLists.txt  package.xml
rb1_localization/config/: localization.rviz
rb1_localization/launch/: amcl.launch
rb1_localization/params/: amcl_params.yaml  poi.yaml  recorded_poi.yaml
rb1_localization/src/: record_poi_server.py
rb1_mapping/: CMakeLists.txt  package.xml
rb1_mapping/config/: gmapping.rviz
rb1_mapping/launch/: mapping.launch  provide_map.launch
rb1_mapping/maps/: map.pgm  map.pgm~
rb1_mapping/params/: gmapping_params.yaml
rb1_mapping/scripts/: startmapping.sh
rb1_mapping/src/: teleop_twist_keyboard.py
rb1_navigation/: CMakeLists.txt  package.xml
rb1_navigation/config/: navigation.rviz
rb1_navigation/launch/: main.launch  move_base.launch  navigation.launch
rb1_navigation/params/: costmap_common.yaml  costmap_global_laser.yaml  costmap_local.yaml  planner.yaml  poi.yaml
rb1_navigation/scripts/: startnavigation.sh
rb1_navigation/src/: main_navigation.py
rb1_navigation/srv/: GoToPoint.srv
