<?xml version="1.0"?>
<package format="2">
  <name>rb1_localization</name>
  <version>0.0.0</version>
  <description>The rb1_localization package</description>

  <maintainer email="robot@todo.todo">robot</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>amcl</build_depend>
  <build_depend>rospy</build_depend>  
  <build_depend>std_msgs</build_depend>    
  <build_depend>message_generation</build_depend>  

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>amcl</build_export_depend>
  <build_depend>std_msgs</build_depend>      
  <build_export_depend>message_runtime</build_export_depend>  

  <exec_depend>amcl</exec_depend>
  <exec_depend>std_msgs</exec_depend>  
  <exec_depend>message_runtime</exec_depend>  

  <export>
  </export>
</package>
